# collection-integrity-ci

./: .gitignore  BUILD_BRIEF.md  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  collection-integrity-demo.yml  pages.yml
benchmarks/: generate.py
benchmarks/manifests/: mini.json
benchmarks/mini/: objects_clean.csv  objects_dirty.csv
docs/: BACKLOG.md  BUILD_PLAN.md  DATA_SOURCES.md  DEMO.md  FUTURE_SCOPE.md  PRD.md  PROGRESS.md  THREAT_MODEL.md  VALIDATION_LOOPS.md
docs/adr/: ADR-007-web-viewer.md
docs/prompts/: kickoff-prompt.md
examples/: generate.py
examples/clean/: objects.csv
examples/dirty/: objects.csv
examples/expected/: dirty_expected.json
examples/mappings/: clean-objects.yaml  clean.yaml  dirty.yaml
scripts/: check_dod.sh  fetch_sample.py
site_src/: about.md  how-built.md  index.md  real-data.md
src/collection_integrity/: __init__.py  cli.py  provenance.py
src/collection_integrity/api/: app.py  run_view.py  views.py
src/collection_integrity/benchmark/: dataset.py  injectors.py  metrics.py  runner.py  source_fixtures.py  synthetic.py
src/collection_integrity/canonical/: mappings.py  models.py
tests/e2e/: test_baseline_roundtrip.py  test_examples.py
tests/fixtures/: locations.csv  mapping_csv.yaml  mapping_dates_vocab.yaml  mapping_json.yaml  mapping_locations.yaml  mapping_media.csv  mapping_objects.csv  mapping_objects.json  mapping_rights.csv  mapping_rights.yaml  mapping_with_media.yaml  objects_clean.csv  objects_dates_vocab.csv  objects_duplicate_accession.csv  objects_with_rights.csv
tests/integration/: test_adversarial.py  test_benchmark_accuracy.py  test_benchmark_runner.py  test_bom_handling.py  test_cleveland_adapter.py  test_fetch_sample_script.py  test_location_accuracy.py  test_mapping_accuracy.py  test_media_accuracy.py  test_met_adapter.py  test_nga_adapter.py  test_object_field_accuracy.py  test_real_data_fixture.py  test_reference_accuracy.py  test_report_fidelity.py  test_rights_accuracy.py  test_scan_cli.py  test_showcase_accuracy.py  test_source_cli.py  test_viewer_api.py  test_viewer_ui.py
tests/property/: test_fingerprint_determinism.py  test_scan_contract_fuzz.py
tests/unit/: test_baselines.py  test_core_rules.py  test_csv_adapter.py  test_date002_rule.py  test_html_report.py  test_location_rules.py  test_mapper.py  test_media_rules.py  test_object_field_rules.py  test_parse_date_years.py  test_reference_rules.py  test_registry.py  test_reports_structured.py  test_rights_rules.py  test_run_store.py  test_sampling.py  test_sarif_report.py
(+35 files in other folders)
