[project]
name = "collection-integrity"
version = "0.1.0"
description = "A portable, local-first quality-assurance layer for museum collection records."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pillow>=10.3",
]

[project.scripts]
collection-ci = "collection_integrity.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/collection_integrity"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
