[project]
name = "collection-integrity"
version = "0.1.0"
description = "A portable, local-first quality-assurance layer for museum collection records."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pillow>=10.3",
    "jinja2>=3.1",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
collection-ci = "collection_integrity.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/collection_integrity"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "httpx>=0.27",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=collection_integrity --cov-report=term-missing"
filterwarnings = [
    # Starlette's TestClient warns about httpx2; we pin httpx intentionally for the viewer tests.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.coverage.run]
source = ["src/collection_integrity"]

[tool.coverage.report]
# VL-07 ratchet: this floor only ever rises. Baseline at wiring time was 97%;
# 95% leaves a small margin so a single-line change cannot spuriously fail CI.
fail_under = 95
show_missing = true
